trunk/OldArchive/3cd2a9d854225a98fe6ce736049bd57b-ce759ceac3a1c87b565ff35b2f7d6b5c/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp:8:37: error: ‘x’ was not declared in this scope
 static_assert(std::is_same<decltype(x), int>::value, "");
                                     ^
main.cpp:8:37: error: ‘x’ was not declared in this scope
main.cpp:8:44: error: template argument 1 is invalid
 static_assert(std::is_same<decltype(x), int>::value, "");
                                            ^
